# fitp1d

./: LICENSE  README.rst  requirements.txt  setup.cfg
notebooks/: Demo.ipynb
src/fitp1d/: __init__.py  basic_cosmo.py  data.py  forecast.py  likelihood.py  model.py  p3d_model.py  plotting.py  xcmb.py
src/fitp1d/scripts/: run_forecast.py  run_p3d_forecast.py  run_xcmb.py
