[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:src/fitp1d/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = fitp1d
version = attr: fitp1d.__version__
author = Naim Goksel Karacayli
author_email = ngokselk@gmail.com
description = Fit Lya P1D
long_description = file: README.rst
license = MIT
project_urls = 
    Bug Reports=https://github.com/p-slash/fitp1d/issues
    ; Documentation=http://fitp1d.readthedocs.io/
    Source=https://github.com/p-slash/fitp1d

[options]
package_dir = 
    =src
packages = find_namespace:
python_requires = >=3.7, <3.11
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    fitp1d-forecast = fitp1d.scripts.run_forecast:main

[options.extras_require]
dev = 
    pytest
    flake8
    bump2version
