[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:src/fitp1d/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = fitp1d
version = attr: fitp1d.__version__
author = Naim Goksel Karacayli
author_email = ngokselk@gmail.com
description = Fit Lya P1D
long_description = file: README.rst
license = MIT
project_urls = 
	Bug Reports=https://github.com/p-slash/fitp1d/issues
	Source=https://github.com/p-slash/fitp1d

[options]
package_dir = 
	=src
packages = find_namespace:
python_requires = >=3.8
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	fitp1d-forecast = fitp1d.scripts.run_forecast:main
	xcmb-forecast = fitp1d.scripts.run_xcmb:main
	p3d-forefit = fitp1d.scripts.run_p3d_forecast:main

[options.extras_require]
jup = jupyter
unest = 
	cython==0.29.36
	ultranest==3.6.1
dev = 
	pytest
	flake8
	bump2version
